tests/typing/bad/testfile-duplicate-2.hs

main = let { x = 1; x = 2; } in putChar '\n'
